# syntacticanalyzer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  auto.sh  main.cpp
src/: grammarworker.cpp  grammarworker.hpp  syntacticanalyzer.cpp  syntacticanalyzer.hpp
test/: lexical_automaton.in  program.txt  psedo_grammar.txt  syntactic_grammar.in
